--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.1",
     "serve": "^14.2.3",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.4",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
