--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -5,25 +5,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "framer-motion": "^11.2.10",
-    "node-sass": "^7.0.3",
     "react": "^18.3.1",
-    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
-    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "serve": "^14.2.3",
-    "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
@@ -55,6 +46,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.6",
+    "gh-pages": "^6.1.1",
     "sass": "^1.77.6"
   }
 }
