--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prateek-balani.github.io/personal-website",
+  "homepage": "https://prateek-balani.github.io/personal-website/personal-website",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
